# work_with_opencv

./: .temp  CMakeLists.txt  README.txt  run.sh  test.cpp
images/: .names.txt
